generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
}

model User {
  id        String  @id @default(cuid())
  email     String  @unique
  password  String
  name      String
  avatarUrl String? @map("avatar_url")

  // Верификация email
  isEmailVerified   Boolean   @default(false) @map("is_email_verified")
  emailVerifyToken  String?   @unique @map("email_verify_token")
  emailVerifyExpiry DateTime? @map("email_verify_expiry")

  // Сброс пароля
  passwordResetToken  String?   @unique @map("password_reset_token")
  passwordResetExpiry DateTime? @map("password_reset_expiry")

  isOnboardingComplete Boolean @default(false) @map("is_onboarding_complete")

  // Подписка
  plan           PLAN        @default(TRIAL)
  planExpiresAt  DateTime?   @map("plan_expires_at")
  planStatus     PLAN_STATUS @default(ACTIVE) @map("plan_status")
  trialStartedAt DateTime?   @default(now()) @map("trial_started_at")

  organizations Organization[]
  refreshTokens RefreshToken[]

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  @@map("users")
}

model RefreshToken {
  id        String   @id @default(cuid())
  token     String   @unique
  expiresAt DateTime @map("expires_at")

  isRevoked Boolean @default(false) @map("is_revoked")

  userAgent String? @map("user_agent")
  ipAddress String? @map("ip_address")
  accessJti String? @map("access_jti") // jti последнего выпущенного access token

  userId String @map("user_id")
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now()) @map("created_at")

  @@index([userId])
  @@map("refresh_tokens")
}

enum PLAN {
  TRIAL // 7 дней бесплатно
  BASIC // 8000₽/год — до 3 магазинов
  PRO // 15000₽/год — безлимит
}

enum PLAN_STATUS {
  ACTIVE
  EXPIRED
  CANCELLED
}

model Organization {
  id String @id @default(cuid())

  ozonClientId Int    @unique @map("ozon_client_id")
  ozonApiKey   String @map("ozon_api_key")

  fullOrg String @map("full_org")
  fullOpf String @map("full_opf")

  // ❗ перевели в String
  inn    String  @unique
  ogrn   String  @unique
  kpp    String? // ИП не имеют КПП, поэтому опционально
  okato5 String  @map("okato_5")

  fullAddress String? @map("full_address")
  country    String
  region     String
  city       String
  street     String?
  house      String?
  room       String?
  postalCode String  @map("postal_code")

  orgLang String @default("RU") @map("org_lang")

  // ✅ каскад при удалении юзера
  userId String @map("user_id")
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  products Product[]

  declarant Declarant?

  createdAt    DateTime      @default(now()) @map("created_at")
  updatedAt    DateTime      @updatedAt @map("updated_at")
  statFormRuns StatFormRun[]

  @@index([userId])
  @@map("organizations")
}

model Declarant {
  id         String  @id @default(cuid())
  name       String?
  surname    String?
  patronymic String?
  position   String? // Должность
  phone      String?
  email      String?

  // ✅ 1:1 + каскад
  organizationId String       @unique @map("organization_id")
  organization   Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)

  document Document?

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  @@index([organizationId])
  @@map("declarants")
}

model Document {
  id String @id @default(cuid())

  typeCode  String @map("type_code") // "RU01001"
  typeShort String @map("type_short") // "ПАСРФ"

  series   String?
  number   String
  issuedBy String   @map("issued_by")
  issuedAt DateTime @map("issued_at")

  declarantId String    @unique @map("declarant_id")
  declarant   Declarant @relation(fields: [declarantId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  @@index([declarantId])
  @@map("documents")
}

model Product {
  id           String  @id @default(cuid())
  productId    Int     @map("product_id")
  offerId      String  @map("offer_id")
  sku          Int
  name         String
  description  String?
  category     String
  categoryPath String  @map("category_path")

  primaryImg String?  @map("primary_img")
  images     String[]

  country           String?
  countriesOfOrigin String[] @map("countries_of_origin")
  countryConflict   Boolean  @default(false) @map("country_conflict")

  // ❗ тоже строка
  tnvedCode   String?       @map("tnved_code")
  tnvedName   String?       @map("tnved_name")
  tnvedUnit   String?       @map("tnved_unit")
  tnvedStatus TNVED_STATUS? @map("tnved_status")

  tnvedAlternatives TnvedAlternative[]

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  organizationId String?       @map("organization_id")
  organization   Organization? @relation(fields: [organizationId], references: [id], onDelete: SetNull)

  @@unique([productId, organizationId])
  @@index([organizationId])
  @@map("products")
}

model TnvedAlternative {
  id        String  @id @default(cuid())
  tnvedCode String  @map("tnved_code")
  tnvedName String? @map("tnved_name")
  tnvedUnit String? @map("tnved_unit")

  productId String  @map("product_id")
  product   Product @relation(fields: [productId], references: [id], onDelete: Cascade)

  @@map("tnved_alternatives")
}

model StatFormRun {
  id             String     @id @default(cuid())
  organizationId String     @map("organization_id")
  period         String // 'YYYY-MM'
  status         RUN_STATUS @default(PENDING)

  detectedCountries   String[]  @map("detected_countries")
  countriesDetectedAt DateTime? @map("countries_detected_at")
  completedAt         DateTime? @map("completed_at")
  failureReason       String?   @map("failure_reason")

  organization Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  statForms    StatForm[]

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  @@unique([organizationId, period])
  @@index([organizationId])
  @@map("stat_form_runs")
}

model StatForm {
  id           String           @id @default(cuid())
  runId        String           @map("run_id")
  country      String
  status       STAT_FORM_STATUS @default(PENDING)
  encryptedXml Json?            @map("encrypted_xml")
  xmlFilename  String?          @map("xml_filename")
  itemsCount   Int?             @map("items_count")
  needsReview  Int?             @map("needs_review")

  completedAt DateTime? @map("completed_at")
  createdAt   DateTime  @default(now()) @map("created_at")
  updatedAt   DateTime  @updatedAt @map("updated_at")

  run StatFormRun @relation(fields: [runId], references: [id], onDelete: Cascade)

  @@unique([runId, country])
  @@index([runId])
  @@map("stat_forms")
}

enum RUN_STATUS {
  PENDING
  BUILDING
  READY
  PARTIAL
  FAILED
}

enum STAT_FORM_STATUS {
  PENDING
  READY
  FAILED
}

enum TNVED_STATUS {
  CLASSIFIED
  NEEDS_REVIEW
  VERIFIED_BY_USER
  VERIFIED_BY_LLM
}

model TnvedLc {
  id   Int     @id @default(autoincrement())
  code String  @unique
  name String
  unit String?

  @@map("tnved_lc")
}
