//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id String [pk]
  email String [unique, not null]
  password String [not null]
  name String [not null]
  avatarUrl String
  isEmailVerified Boolean [not null, default: false]
  emailVerifyToken String [unique]
  emailVerifyExpiry DateTime
  passwordResetToken String [unique]
  passwordResetExpiry DateTime
  isOnboardingComplete Boolean [not null, default: false]
  plan PLAN [not null, default: 'TRIAL']
  planExpiresAt DateTime
  planStatus PLAN_STATUS [not null, default: 'ACTIVE']
  trialStartedAt DateTime [default: `now()`]
  organizations organizations [not null]
  refreshTokens refresh_tokens [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table refresh_tokens {
  id String [pk]
  token String [unique, not null]
  expiresAt DateTime [not null]
  isRevoked Boolean [not null, default: false]
  userAgent String
  ipAddress String
  accessJti String
  userId String [not null]
  user users [not null]
  createdAt DateTime [default: `now()`, not null]
}

Table organizations {
  id String [pk]
  ozonClientId Int [unique, not null]
  ozonApiKey String [not null]
  fullOrg String [not null]
  fullOpf String [not null]
  inn String [unique, not null]
  ogrn String [unique, not null]
  kpp String
  okato5 String [not null]
  fullAddress String
  country String [not null]
  region String [not null]
  city String [not null]
  street String
  house String
  room String
  postalCode String [not null]
  orgLang String [not null, default: 'RU']
  userId String [not null]
  user users [not null]
  products products [not null]
  declarant declarants
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  statFormRuns stat_form_runs [not null]
}

Table declarants {
  id String [pk]
  name String
  surname String
  patronymic String
  position String
  phone String
  email String
  organizationId String [unique, not null]
  organization organizations [not null]
  document documents
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table documents {
  id String [pk]
  typeCode String [not null]
  typeShort String [not null]
  series String
  number String [not null]
  issuedBy String [not null]
  issuedAt DateTime [not null]
  declarantId String [unique, not null]
  declarant declarants [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table products {
  id String [pk]
  productId Int [not null]
  offerId String [not null]
  sku Int [not null]
  name String [not null]
  description String
  category String [not null]
  categoryPath String [not null]
  primaryImg String
  images String[] [not null]
  country String
  countriesOfOrigin String[] [not null]
  countryConflict Boolean [not null, default: false]
  tnvedCode String
  tnvedName String
  tnvedUnit String
  tnvedStatus TNVED_STATUS
  tnvedAlternatives tnved_alternatives [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  organizationId String
  organization organizations

  indexes {
    (productId, organizationId) [unique]
  }
}

Table tnved_alternatives {
  id String [pk]
  tnvedCode String [not null]
  tnvedName String
  tnvedUnit String
  productId String [not null]
  product products [not null]
}

Table stat_form_runs {
  id String [pk]
  organizationId String [not null]
  period String [not null]
  status RUN_STATUS [not null, default: 'PENDING']
  detectedCountries String[] [not null]
  countriesDetectedAt DateTime
  completedAt DateTime
  failureReason String
  organization organizations [not null]
  statForms stat_forms [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (organizationId, period) [unique]
  }
}

Table stat_forms {
  id String [pk]
  runId String [not null]
  country String [not null]
  status STAT_FORM_STATUS [not null, default: 'PENDING']
  encryptedXml Json
  xmlFilename String
  itemsCount Int
  needsReview Int
  completedAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  run stat_form_runs [not null]

  indexes {
    (runId, country) [unique]
  }
}

Table tnved_lc {
  id Int [pk, increment]
  code String [unique, not null]
  name String [not null]
  unit String
}

Enum PLAN {
  TRIAL
  BASIC
  PRO
}

Enum PLAN_STATUS {
  ACTIVE
  EXPIRED
  CANCELLED
}

Enum RUN_STATUS {
  PENDING
  BUILDING
  READY
  PARTIAL
  FAILED
}

Enum STAT_FORM_STATUS {
  PENDING
  READY
  FAILED
}

Enum TNVED_STATUS {
  CLASSIFIED
  NEEDS_REVIEW
  VERIFIED_BY_USER
  VERIFIED_BY_LLM
}

Ref: refresh_tokens.userId > users.id [delete: Cascade]

Ref: organizations.userId > users.id [delete: Cascade]

Ref: declarants.organizationId - organizations.id [delete: Cascade]

Ref: documents.declarantId - declarants.id [delete: Cascade]

Ref: products.organizationId > organizations.id [delete: Set Null]

Ref: tnved_alternatives.productId > products.id [delete: Cascade]

Ref: stat_form_runs.organizationId > organizations.id [delete: Cascade]

Ref: stat_forms.runId > stat_form_runs.id [delete: Cascade]